--- a/res/layout/activity_help.xml
+++ b/res/layout/activity_help.xml
@@ -5,20 +5,102 @@
     
     android:scrollbars="vertical" >
 
-   <TextView
-       android:id="@+id/SonucTextView"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_gravity="center_horizontal"
-       android:layout_marginLeft="12dp"
-       android:layout_marginRight="12dp"
-       android:layout_marginTop="12dp"
-       android:shadowColor="#7F000000"
-       android:shadowDx="1"
-       android:shadowDy="1"
-       android:shadowRadius="2"
-       android:text="@string/helpDes"
-       android:textAppearance="?android:attr/textAppearanceMedium"
-       android:textSize="20dp" />
+	<LinearLayout
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" >
+
+	    <TextView
+	        android:id="@+id/SonucTextView"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal"
+	        android:layout_marginLeft="12dp"
+	        android:layout_marginRight="12dp"
+	        android:layout_marginTop="12dp"
+	        android:layout_weight="1"
+	        android:drawableBottom="@drawable/ic_launcher"
+	        android:shadowColor="#7F000000"
+	        android:shadowDx="1"
+	        android:shadowDy="1"
+	        android:shadowRadius="2"
+	        android:text="@string/helpDes"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textSize="20dp" />
+
+	    <TextView
+	        android:id="@+id/SonucTextView2"
+	        android:layout_width="wrap_content"
+	        android:layout_height="match_parent"
+	        android:layout_gravity="center_horizontal"
+	        android:layout_marginLeft="12dp"
+	        android:layout_marginRight="12dp"
+	        android:layout_marginTop="12dp"
+	        android:layout_weight="1"
+	        android:drawableBottom="@drawable/ic_launcher"
+	        android:shadowColor="#7F000000"
+	        android:shadowDx="1"
+	        android:shadowDy="1"
+	        android:shadowRadius="2"
+	        android:text="@string/helpDes2"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textSize="20dp" />
+	    
+	    <TextView
+	        android:id="@+id/SonucTextView3"
+	        android:layout_width="wrap_content"
+	        android:layout_height="match_parent"
+	        android:layout_gravity="center_horizontal"
+	        android:layout_marginLeft="12dp"
+	        android:layout_marginRight="12dp"
+	        android:layout_marginTop="12dp"
+	        android:layout_weight="1"
+	        android:drawableBottom="@drawable/ic_launcher"
+	        android:shadowColor="#7F000000"
+	        android:shadowDx="1"
+	        android:shadowDy="1"
+	        android:shadowRadius="2"
+	        android:text="@string/helpDes3"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textSize="20dp" />
+	    
+	    <TextView
+	        android:id="@+id/SonucTextView4"
+	        android:layout_width="wrap_content"
+	        android:layout_height="match_parent"
+	        android:layout_gravity="center_horizontal"
+	        android:layout_marginLeft="12dp"
+	        android:layout_marginRight="12dp"
+	        android:layout_marginTop="12dp"
+	        android:layout_weight="1"
+	        android:drawableBottom="@drawable/ic_launcher"
+	        android:shadowColor="#7F000000"
+	        android:shadowDx="1"
+	        android:shadowDy="1"
+	        android:shadowRadius="2"
+	        android:text="@string/helpDes4"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textSize="20dp" />
+	    
+	    <TextView
+	        android:id="@+id/SonucTextView5"
+	        android:layout_width="wrap_content"
+	        android:layout_height="match_parent"
+	        android:layout_gravity="center_horizontal"
+	        android:layout_marginLeft="12dp"
+	        android:layout_marginRight="12dp"
+	        android:layout_marginTop="12dp"
+	        android:layout_weight="1"
+	        android:drawableBottom="@drawable/ic_launcher"
+	        android:shadowColor="#7F000000"
+	        android:shadowDx="1"
+	        android:shadowDy="1"
+	        android:shadowRadius="2"
+	        android:text="@string/helpDes5"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textSize="20dp" />
+	</LinearLayout>
 
 </ScrollView>
+
+
